    Proxies send a protocol revision number "r=1" to signify the change.

  o The managed transport method name "flashproxy" is now recognized as
    a synonym for "websocket".

  o The badge localization now understands language subtags such as
    "ru-RU". Fixes bug 8828.

  o Language tags for badge localization are now case-insensitive.
    Patch by Eduardo Stalinho. Fixes bug 8829.

Changes in version 1.1
  o Programs that use certificate pins now take a --disable-pin option
    that causes pins to be ignored.

Changes in version 1.0
  o The facilitator runs on a new domain name fp-facilitator.org. Fixes
    bug 7160.

  o Fixed badge rendering for a certain combination of Chrome and
    AdBlock Plus. Patch by Arlo Breault. Fixes bug 8300.

  o websocket-server sends the new TRANSPORT command of the extended OR
    port protocol to identify incoming connections as websocket.

  o There is now a 10-second HTTP request timeout in websocket-server.
    Fixes bug 8626.

  o The new --facilitator-pubkey option of flashproxy-client lets you
    configure a different facilitator public key, if you're using one
    other than the one at fp-facilitator.org. Patch by Arlo Breault.
    Fixes bug 8800.

  o The badge now has a "lang" parameter for localization. Translations
    exist for en, de, and ru. Patch by Peter Bourgelais.

  o Made facilitator-email-poller reconnect after some SSL and socket
    errors. Patch by Alexandre Allaire and David Fifield. Fixes bug
    8284.

  o Added flashproxy-reg-url to the py2exe instructions in setup.py;
    this lack meant that flashproxy-reg-url was missing from Windows
    bundles. Patch by Arlo Breault. Fixes bug 8840.

  o Enabled HTTP Strict Transport Security (HSTS) on the facilitator.
    Patch by Eduardo Stalinho. Fixes bug 8772.

  o Added a new "appspot" registration method, which is now the first
    registration method tried, ahead of "email". "appspot" sends